src/objects/Statement__c.object
<CustomObject>
    <description>Guarantor Statement details</description>
    <fields>
        <fullName>Guarantor__c</fullName>
        <label>Guarantor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Guarantor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Statements</relationshipLabel>
        <relationshipName>Statements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Hex_Code__c</fullName>
        <label>Hex Code</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Large_Statement_ID__c</fullName>
        <label>Large Statement Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Balance__c</fullName>
        <description>Starting Balance of account</description>
        <label>Original Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Charge_Groups__c</fullName>
        <label>Original Charge Groups</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PdfUrl__c</fullName>
        <formula>IF( S3_Key__c  &lt;&gt; &quot;&quot;, HYPERLINK(&quot;/apex/&quot; &amp; $Setup.Sirono_Settings__c.NS_Bar_Prefix__c &amp; &quot;ViewStatementPDF?id=&quot; &amp; Id , &quot;View PDF&quot;), &quot;N/A&quot;)</formula>
        <label>PDF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S3_Key__c</fullName>
        <label>S3 Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sirono_ID__c</fullName>
        <externalId>true</externalId>
        <label>Sirono Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Small_Statement_ID__c</fullName>
        <label>Small Statement Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Statement_Date__c</fullName>
        <description>Date of the statement</description>
        <label>Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Statement_ID__c</fullName>
        <formula>TEXT(Large_Statement_ID__c) &amp; &apos;-&apos; &amp; TEXT(Small_Statement_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Statement Id</label>
        <type>Text</type>
    </fields>
    <label>Statement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PdfUrl__c</columns>
        <columns>Statement_Date__c</columns>
        <columns>Guarantor__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Statements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>